fix(RF01.1): atende critérios de cadastro e listagem de clientes
